[project]
name = "graphs"
version = "0.0.1"
description = "Chatbot tra cứu hồ sơ lưu trữ sử dụng LangGraph + MCP + OpenAI."
authors = [
    { name = "Viettinh", email = "viettinh@knmholdings.vn" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "httpx~=0.28.1",
    "langchain-core~=1.2.5",
    "langgraph-checkpoint-postgres~=3.0.2",
    "langgraph~=1.0.3",
    "langchain~=1.2.0",
    "langchain_openai~=1.0.2",
    "langchain-community~=0.3.31",
    "pydantic~=2.11.4",
    "pyyaml~=6.0.2",
    "python-dotenv~=1.1.1",
    "typing_extensions>=4.14.0",
    "openai~=1.109.1",
    "requests~=2.32.3",
    "redis===6.4.0",
    "python-multipart~=0.0.20",
    "psycopg~=3.2.8",
    "gotrue~=2.12.0",
    "python-slugify~=8.0.4",
    "dotenv~=0.9.9",
    "langgraph_sdk~=0.3.3",
    "langgraph-cli[inmem]~=0.4.7",
    "langchain_mcp_adapters~=0.1.12",
    "langfuse~=3.12.1",
    "langgraph-prebuilt==1.0.5"
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
[tool.setuptools.package-dir]
"graphs" = "src/graph"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "D", # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "httpx~=0.28.1",
    "langchain-core~=1.2.5",
    "langgraph-checkpoint-postgres~=3.0.2",
    "langgraph~=1.0.3",
    "langchain~=1.2.0",
    "langchain_openai~=1.0.2",
    "langchain-community~=0.3.31",
    "pydantic~=2.11.4",
    "pyyaml~=6.0.2",
    "python-dotenv~=1.1.1",
    "typing_extensions>=4.14.0",
    "openai~=1.109.1",
    "requests~=2.32.3",
    "redis===6.4.0",
    "python-multipart~=0.0.20",
    "psycopg~=3.2.8",
    "gotrue~=2.12.0",
    "python-slugify~=8.0.4",
    "dotenv~=0.9.9",
    "langgraph_sdk~=0.3.3",
    "langgraph-cli[inmem]~=0.4.7",
    "langchain_mcp_adapters~=0.1.12",
    "langfuse~=3.12.1",
    "langgraph-prebuilt==1.0.5",
    "mypy>=1.13.0",
    "pytest>=9.0.3",
    "ruff>=0.8.2",
    "anyio>=4.7.0"
]
